--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
   "author": "Justin Whitney",
   "license": "ISC",
   "dependencies": {
-    "@zeit/next-css": "0.0.7",
-    "next": "^5.0.0",
-    "next-redux-wrapper": "^1.3.5",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-redux": "^5.0.6",
-    "redux": "^3.7.2",
-    "redux-devtools-extension": "^2.13.2",
-    "redux-thunk": "^2.2.0"
-  }
+    "@zeit/next-css": "^1.0.1",
+    "next": "^8.0.4",
+    "next-redux-wrapper": "^3.0.0-alpha.2",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-redux": "^6.0.1",
+    "redux": "^4.0.1",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0"
+  },
+  "devDependencies": {}
 }
